==> something-Constant/rp2040-TempLogger/Core/Lib/sd-card/physical-api/fatfs_sd.c <==
#define TRUE 1
#define FALSE 0
#define bool BYTE
#define _USE_WRITE 1
#include "fatfs_sd.h"

inline static void SELECT(void) { gpio_put(SD_CS_PIN, 0); }

inline static void DESELECT(void) { gpio_put(SD_CS_PIN, 1); }

static void SPI_TxByte(uint8_t data) {
    while (spi_is_busy(spi1))
        ;
    spi_write_blocking(spi1, &data, 1);
}

static void SPI_TxBuffer(uint8_t *buffer, uint16_t len) {
    while (spi_is_busy(spi1))
        ;

    spi_write_blocking(spi1, buffer, len);
}

static uint8_t SPI_RxByte(void) {
    uint8_t dummy, data;
    dummy = 0xFF;

    while (spi_is_busy(spi1))
        ;
    spi_write_read_blocking(spi1, &dummy, &data, 1);

    return data;
}
